src/webapp/components/uiOptions/css/FullUIOptions.css
/* UI Option styles for full page w/ or w/o preview */

.fl-col-fixed-31em { width: 31em; }
.fl-col-fixed-38em { width: 38em; }
.fl-col-fixed-54em { width: 54em; }
.fl-col-fixed-72em { width: 72em; }

/* Form */

.fl-uiOptions ul {
	margin-left: 0px;
}

.fl-uiOptions ul li {
    list-style: none;
    clear: both; 
}

/* Sections (e.g., Text & Display, Layout & Navigation) */

.fl-uio-category {
    padding-bottom: 48px; /* separation between categories */
}

/* Section headers */

.fl-uiOptions h2 {
	font-size: 1.29em;
	font-weight: bold;
	clear: both;
	color: #444444;
	padding-top: 14px;
	padding-bottom: 22px;	
}

.fl-uiOptions h2 img {
	margin-bottom: -3px;
	padding-right: 5px;
}

/* Individual options (e.g., text size, simplify layout, emphasize links) */

.fl-uio-option-2col {
    padding-top: 40px;
}

.fl-uio-option-1col {
    padding-top: 28px;
}

.fl-uio-option-first {
    padding-top: 8px;
}

/* Descriptions */

.fl-uio-option-description {
	color: #4D4D4D;
	margin-bottom: 0px;
	padding-top: 5px;
}

/* Labels */

.fl-uiOptions label {
	text-transform: uppercase;
	font-size: 1.2em;
}

/* Text and display section */

.fl-uiOptions .fl-uio-form label {
    display: block;
    float: left;
	width: 14em;
}

.fl-uiOptions .fl-uio-form .fl-inputs {
	float: left;
}

.fl-uiOptions .fl-uio-form input[type="text"] {
	width: 2em;
}
/* Save & apply, reset, cancel buttons */

.fl-uiOptions .fl-uio-buttons {
	margin-top: 1em;
	float: left;
}

.fl-uiOptions .fl-uio-buttons input {
	text-transform: uppercase;
	text-decoration: underline;
	font-weight: bold;
	color: #333333;
/*  border: 2px solid #d7d7d7;*/
    background: -moz-linear-gradient(bottom, #e0e0e0, #fff);
    padding: 5px;
	height: 32px;
	font-size: 1em;
    margin-right: 3px;
}

.fl-uiOptions .fl-uio-buttons .fl-uio-save {
	padding-left: 16px;
	background-image: url("../../../../components/uiOptions/images/uio_icon_save_13x13.png");
	background-repeat: no-repeat;
	background-position: 4px 6px;
    background: -moz-linear-gradient(bottom, #e0e0e0, #fff);
}

.fl-uiOptions .fl-uio-buttons .fl-uio-cancel {
	padding-left: 16px;
	background-image: url("../../../../components/uiOptions/images/uio_icon_cancel_13x13.png");
	background-repeat: no-repeat;
	background-position: 3px 6px;
    background: -moz-linear-gradient(bottom, #e0e0e0, #fff);
}

/* Slider position. More slider styles in /css/Slider.css */

.fl-uiOptions .fl-slider {
	float:left;
	margin-right: 10px;
}

/* Check boxes */

.fl-uiOptions input[type="checkbox"] {
	margin-right:10px;
	margin-bottom: 2em;
	border: 1px solid black;
}

